[package]
name = "fbd_sequencer_cli"
version = "0.1.0"
edition = "2021"
authors = ["Seiji Ainoguchi <seiji.ainoguchi@gmail.com>"]
description = "A command-line tool for playing music using PSG or AY-3-8910 sound sources. It supports playing .fbd sequence files and can output directly to audio devices or generate .wav files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ain1084/rust_fbd_sequencer_cli"
homepage = "https://github.com/ain1084/rust_fbd_sequencer_cli"
documentation = "https://docs.rs/fbd_sequencer_cli"
readme = "README.md"
keywords = ["sequencer", "music", "PSG", "AY-3-8910", "audio"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
fbd_sequencer = { version = "0.2.0", optional = true }
direct_ring_buffer = "0.2.0"
psg_lite = "0.1.2"
psg = "1.0.1"
hound = "3.5.1"
tinyaudio = "0.1.3"

[features]
default = ["float"]
float = ["fbd_sequencer/float"]
